<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Одесса Сегодня</string>
    <string name="premiere">ПРЕМЬЕРА</string>
    <string name="select_date">Выбрать дату</string>
    <string name="today_marker">Сегодня,</string>
    <string name="timetable">Расписание</string>
    <string name="cinemas">Кинотеатры</string>
    <string name="announcements">Анонсы</string>
    <string name="error_loading_films">Произошла ошибка при загрузке фильмов</string>
    <string name="film_duration">%1$d мин.</string>
    <string name="film_director"><![CDATA[<b>Режиссер: </b>%1$s]]></string>
    <string name="film_actors"><![CDATA[<b>Актеры: </b>%1$s]]></string>
    <string name="comments">Отзывы</string>
    <string name="comments_date_format">dd MMMM yyyy в HH:mm</string>
    <string name="add_comment">Добавить комментарий</string>
    <string name="name">Имя</string>
    <string name="comment_text">Текст комментария</string>
    <string name="write_comment">Написать отзыв</string>
    <string name="fill_field">Заполните поле</string>
    <string name="error_loading_cinemas">Не удалось обновить список кинотеатров</string>
    <string name="cinema_info">Информация о кинотеатре</string>
    <string name="cinema_phones">Телефоны:</string>
    <string name="cinema_address">Адрес:</string>
    <string name="map_not_found">Приложение-карта не найдено</string>
    <string name="comments_with_count"><![CDATA[Отзывы <b>%1$d</b>]]></string>
    <string name="cinema_photos"><![CDATA[Фото <b>%1$d</b>]]></string>
    <string name="format_unknown">\?</string>
    <string name="format_thirty_fife_mm">35мм</string>
    <string name="format_two_d">2D</string>
    <string name="format_three_d">3D</string>
    <string name="format_imax_three_d">i3D</string>
    <string name="format_imax">IMAX</string>
    <string name="format_five_d">5D</string>
    <string name="format_four_dx">i4DX</string>
    <string name="share">Поделиться...</string>
    <string name="image_caching_progress">Идет сохранение изображения...</string>
    <string name="tickets">Билеты</string>

    <string-array name="formats">
        <item>@string/format_unknown</item>
        <item>@string/format_thirty_fife_mm</item>
        <item>@string/format_two_d</item>
        <item>@string/format_three_d</item>
        <item>@string/format_imax_three_d</item>
        <item>@string/format_imax</item>
        <item>@string/format_five_d</item>
        <item>@string/format_four_dx</item>
    </string-array>

    <!--main menu-->
    <string name="menu_category_event">СОБЫТИЯ</string>
    <string name="menu_category_place">МЕСТА</string>
    <string name="menu_films">Фильмы</string>
    <string name="menu_concert">Концерты (Скоро)</string>
    <string name="menu_party">Вечеринки (Скоро)</string>
    <string name="menu_spectacle">Спектакли (Скоро)</string>
    <string name="menu_exhibition">Выставки (Скоро)</string>
    <string name="menu_sport">Спорт (Скоро)</string>
    <string name="menu_workshop">Семинары, акции (Скоро)</string>
    <string name="menu_cinema">Кинотеатры</string>
    <string name="menu_theatre">Театры (Скоро)</string>
    <string name="menu_concert_hall">Концертные залы (Скоро)</string>
    <string name="menu_club">Клубы (Скоро)</string>
    <string name="menu_museum">Музеи (Скоро)</string>
    <string name="menu_gallery">Галереи (Скоро)</string>
    <string name="menu_zoo">Цирк, дельфинарий, зоопарк (Скоро)</string>
    <string name="menu_quest">Квесты (Скоро)</string>
    <string name="menu_restaurant">Рестораны (Скоро)</string>
    <string name="menu_cafe">Кафе (Скоро)</string>
    <string name="menu_pizza">Пиццерии (Скоро)</string>
    <string name="menu_sushi">Суши (Скоро)</string>
    <string name="menu_karaoke">Караоке-клубы (Скоро)</string>
    <string name="menu_skating_rink">Катки (Скоро)</string>
    <string name="menu_bowling">Боулинг (Скоро)</string>
    <string name="menu_billiard">Бильярдные залы (Скоро)</string>
    <string name="menu_sauna">Сауны (Скоро)</string>
    <string name="menu_bath">Бани (Скоро)</string>
</resources>
