<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/films_list_item_padding"
            android:paddingRight="@dimen/films_list_item_padding"
            android:paddingTop="@dimen/category_selector_padding"
            android:paddingBottom="@dimen/category_selector_padding"
            android:background="@color/application_green"
            android:weightSum="3" >
        <RadioButton
                android:id="@+id/timetable"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/CategorySelectorRadioButton"
                android:text="@string/timetable" />
        <RadioButton
                android:id="@+id/cinemas"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/CategorySelectorRadioButton"
                android:text="@string/cinemas" />
        <RadioButton
                android:id="@+id/announcements"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/CategorySelectorRadioButton"
                android:text="@string/announcements" />
    </RadioGroup>
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>

