<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ListView
        android:id="@+id/comments_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:listSelector="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@color/comments_list_divider_color"
        android:dividerHeight="@dimen/comments_list_divider_height" />
    <LinearLayout
        android:id="@+id/add_comment_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/application_green"
        android:visibility="invisible"
        android:layout_gravity="bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <ImageButton
                android:id="@+id/hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/hide_comment_panel"
                android:background="@null"
                android:minWidth="@dimen/add_comment_button_min_size"
                android:minHeight="@dimen/add_comment_button_min_size"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:textSize="@dimen/write_comment_text_size"
                android:textColor="@color/write_comment_text_color"
                android:text="@string/write_comment" />
            <ImageButton
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/send_comment"
                android:background="@null"
                android:minWidth="@dimen/add_comment_button_min_size"
                android:minHeight="@dimen/add_comment_button_min_size"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <EditText
            android:id="@+id/comment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/add_comment_edit_text_padding"
            android:background="@color/add_comment_edit_text_bg"
            android:hint="@string/name"
            android:singleLine="true"
            android:maxLength="100" />
        <EditText
            android:id="@+id/comment_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/add_comment_text_top_margin"
            android:padding="@dimen/add_comment_edit_text_padding"
            android:gravity="top|left"
            android:background="@color/add_comment_edit_text_bg"
            android:maxLength="1000"
            android:hint="@string/comment_text"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"/>
    </LinearLayout>
</FrameLayout>