<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/film_details_header_bg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/film_details_padding"
        android:background="@android:color/white">
        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/film_poster"
            android:layout_width="@dimen/film_thumbnail_image_width"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/film_details_poster__margin_right" />
        <TextView
            android:id="@+id/film_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/film_poster"
            android:layout_alignParentTop="true"
            android:textSize="@dimen/film_name_text_size"
            android:textColor="@color/films_name_text_color"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end" />
        <TextView
            android:id="@+id/genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/film_poster"
            android:layout_below="@id/film_name"
            android:textSize="@dimen/genre_text_size"
            android:textColor="@color/films_genre_text_color"/>
        <RatingBar
            android:id="@+id/film_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/film_poster"
            android:layout_below="@id/genre"
            android:numStars="5"
            android:stepSize="0.1"
            android:layout_marginTop="@dimen/films_ratingbar_margin_top"
            android:layout_marginBottom="@dimen/films_ratingbar_margin_bottom"
            style="@style/FilmsRatingBarTheme"
            android:isIndicator="true"/>
        <LinearLayout
            android:id="@+id/duration_and_comments_container"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/film_poster"
            android:layout_below="@id/film_rating">
            <ImageView
                android:id="@+id/film_duration_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginRight="@dimen/film_duration_icon_margin_right"
                android:src="@drawable/ic_film_duration" />
            <TextView
                android:id="@+id/film_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginRight="@dimen/film_duration_margin_right"
                android:textSize="@dimen/film_duration_text_size"
                android:textColor="@color/film_duration_text_color" />
            <TextView
                android:id="@+id/comments_count"
                style="@style/CommentsCountLabel"
                android:layout_gravity="top"
                android:layout_marginRight="@dimen/comments_count_margin_right"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:textSize="@dimen/film_duration_text_size"
                android:textColor="@color/film_duration_text_color"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/comments"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/min_max_prices_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/min_max_prices_icon_margin_top"
            android:layout_marginRight="@dimen/min_max_prices_icon_margin_right"
            android:layout_toRightOf="@id/film_poster"
            android:layout_below="@id/duration_and_comments_container"
            android:src="@drawable/ic_cash"/>
        <TextView
            android:id="@+id/min_max_prices"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_toRightOf="@id/min_max_prices_icon"
            android:layout_alignTop="@id/min_max_prices_icon"
            android:layout_alignBottom="@id/min_max_prices_icon"
            android:textSize="@dimen/min_max_prices_text_size"
            android:textColor="@color/min_max_prices_text_color"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:paddingLeft="@dimen/film_details_padding"
        android:paddingRight="@dimen/film_details_padding"
        android:paddingBottom="6dip"
        android:paddingTop="6dip">
        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="4dip">
            <Button
                android:id="@+id/show_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/green_button"
                android:textColor="@android:color/white"
                android:text="@string/comments"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="@dimen/film_details_button_icon_margin_left"
                android:src="@drawable/ic_add_comment"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="4dip">
            <Button
                android:id="@+id/tickets"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/green_button"
                android:textColor="@android:color/white"
                android:text="@string/tickets"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="@dimen/film_details_button_icon_margin_left"
                android:src="@drawable/ic_arrow_tickets"/>
        </FrameLayout>
    </LinearLayout>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/film_details_padding"
        android:paddingRight="@dimen/film_details_padding">
        <LinearLayout
            android:id="@+id/posters_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <FrameLayout
                android:id="@+id/youtube_fragment_container"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/film_details_posters_height"
                android:layout_marginTop="@dimen/film_details_posters_margin"
                android:layout_marginBottom="@dimen/film_details_posters_margin" />
        </LinearLayout>
    </HorizontalScrollView>
    <TextView
        android:id="@+id/director"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/film_details_padding"
        android:layout_marginRight="@dimen/film_details_padding"
        android:layout_marginBottom="@dimen/film_details_director_padding"
        android:textSize="@dimen/film_details_director_text_size"
        android:textColor="@color/film_details_director_text_color"/>
    <TextView
        android:id="@+id/actors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/film_details_padding"
        android:layout_marginRight="@dimen/film_details_padding"
        android:layout_marginBottom="@dimen/film_details_actors_padding_bottom"
        android:textSize="@dimen/film_details_actors_text_size"
        android:textColor="@color/film_details_actors_text_color" />
    <com.kvest.odessatoday.ui.widget.ExpandablePanel
        xmlns:example="http://schemas.android.com/apk/res/com.kvest.odessatoday"
        android:id="@+id/expand_panel"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginBottom="10dip"
        example:handle="@+id/expand_description"
        example:content="@+id/film_description"
        example:collapsedHeight="@dimen/film_description_collapsed_height"
        example:animationDuration="300">
        <TextView
            android:id="@id/film_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/film_details_padding"
            android:layout_marginRight="@dimen/film_details_padding"
            android:layout_marginBottom="@dimen/film_details_description_padding_bottom"
            android:textSize="@dimen/film_details_description_text_size"
            android:textColor="@color/film_details_description_text_color"
            android:autoLink="all"
            android:linksClickable="true"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <View
                android:layout_width="0dip"
                android:layout_height="@dimen/film_expand_text_divider_height"
                android:layout_weight="1"
                android:background="@color/film_expand_text_divider_color"
                android:layout_gravity="center_vertical" />
            <ImageButton
                android:id="@+id/expand_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:minHeight="20dip"
                android:src="@drawable/ic_expand_arrow" />
            <View
                android:layout_width="0dip"
                android:layout_height="@dimen/film_expand_text_divider_height"
                android:layout_weight="1"
                android:background="@color/film_expand_text_divider_color"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
    </com.kvest.odessatoday.ui.widget.ExpandablePanel>
    <LinearLayout
        android:id="@+id/timetable_date_container"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginLeft="@dimen/film_details_padding"
        android:layout_marginRight="@dimen/film_details_padding"
        android:layout_marginBottom="@dimen/timetable_date_margin_vertical"
        android:padding="@dimen/complex_date_padding"
        android:gravity="center_vertical"
        android:background="@drawable/complex_date_bg">
        <TextView
            android:id="@+id/is_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today_marker"
            android:textColor="@color/complex_date_text_color"
            android:textSize="@dimen/complex_date_text_size"/>
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/complex_date_text_color"
            android:textSize="@dimen/complex_date_text_size" />
        <TextView
            android:id="@+id/week_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/complex_date_week_text_color"
            android:textSize="@dimen/complex_date_week_text_size" />
        <View
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <ImageView
            android:id="@+id/show_calendar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar" />
    </LinearLayout>
</LinearLayout>